# keyring

./: .gitignore  Cargo.toml  Makefile
app/: .gitignore  Cargo.toml
app/src/: keyring.rs  lib.rs
app/src/keyring/: cred.rs  cryptutils.rs  errors.rs  utils.rs
app/src/keyring/io/: js_wrapper.rs  read.rs  write.rs
enclave/: Enclave_t.c  Enclave_t.h
js/: scribe.js
src/: keyring.rs  lib.rs
src/keyring/: constants.rs  cred.rs  cryptutils.rs  errors.rs  io.rs  utils.rs
src/keyring/io/: js_wrapper.rs  read.rs  write.rs
