[package]
name = "keyring"
version = "0.2.0"
authors = ["Louis Prud'homme <louis.prudhomme@hotmail.com>"]
edition = "2018"
description = "Rust/WASM/SGX backend for a password manager"
repository = "github.com/louis-prudhomme/keyring"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.3"
sha2 = "0.9.5"
rust-argon2 = "0.8"
block-modes = "0.8.1"
aes = "0.7.4"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde_json = "1.0.32"
serde_derive = "1.0.80"
serde = "1.0.80"
console_error_panic_hook = "0.1.6"
wasm-bindgen-futures = "0.4.24"
js-sys = "0.3.51"