[package]
name = "keyring"
version = "0.3.0"
authors = ["Louis Prud'homme <louis.prudhomme@hotmail.com>"]
edition = "2018"
description = "Rust/WASM/SGX backend for a password manager"
repository = "github.com/louis-prudhomme/keyring"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
# crypto tools
aes-gcm-siv = "0.10.2"
argon2 = "0.2.1"
block-modes = "0.8.1"
sha3 = "0.9.1"

# random utilies (some used by crypto tools)
rand = "0.8.3"
getrandom = { version = "0.2", features = ["js"] }
rand_core = { version = "0.6.3", features = ["std"] }

# wasm types binding
js-sys = "0.3.51"
serde = "1.0.80"
serde_json = "1.0.32"
serde_derive = "1.0.80"

# wasm and wasm utilities
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.24"
console_error_panic_hook = "0.1.6"

[profile.release]
debug = true