[package]
name = "keyring"
version = "0.3.0"
authors = ["Louis Prud'homme <louis.prudhomme@hotmail.com>"]
edition = "2018"
description = "Rust/WASM/SGX backend for a password manager"
repository = "github.com/louis-prudhomme/keyring"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
# sgx
#sgxwasm = { path = "sgxwasm" }

# crypto tools
aes = "0.7.4"
argon2 = "0.2.1"
block-modes = "0.8.1"

# random utilies (some used by crypto tools)
rand = "0.8.3"
getrandom = { version = "0.2", features = ["js"] }
rand_core = { version = "0.6.3", features = ["std"] }

# wasm types binding
js-sys = "0.3.51"
serde = "1.0.80"
serde_json = "1.0.32"
serde_derive = "1.0.80"

# wasm and wasm utilities
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.24"
console_error_panic_hook = "0.1.6"

[profile.release]
debug = true

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_alloc = { path = "../../incubator-teaclave-sgx-sdk/sgx_alloc" }
sgx_build_helper = { path = "../../incubator-teaclave-sgx-sdk/sgx_build_helper" }
sgx_cov = { path = "../../incubator-teaclave-sgx-sdk/sgx_cov" }
sgx_crypto_helper = { path = "../../incubator-teaclave-sgx-sdk/sgx_crypto_helper" }
sgx_libc = { path = "../../incubator-teaclave-sgx-sdk/sgx_libc" }
sgx_rand = { path = "../../incubator-teaclave-sgx-sdk/sgx_rand" }
sgx_rand_derive = { path = "../../incubator-teaclave-sgx-sdk/sgx_rand_derive" }
sgx_serialize = { path = "../../incubator-teaclave-sgx-sdk/sgx_serialize" }
sgx_serialize_derive = { path = "../../incubator-teaclave-sgx-sdk/sgx_serialize_derive" }
sgx_serialize_derive_internals = { path = "../../incubator-teaclave-sgx-sdk/sgx_serialize_derive_internals" }
sgx_tcrypto = { path = "../../incubator-teaclave-sgx-sdk/sgx_tcrypto" }
sgx_tcrypto_helper = { path = "../../incubator-teaclave-sgx-sdk/sgx_tcrypto_helper" }
sgx_tdh = { path = "../../incubator-teaclave-sgx-sdk/sgx_tdh" }
sgx_tkey_exchange = { path = "../../incubator-teaclave-sgx-sdk/sgx_tkey_exchange" }
sgx_tprotected_fs = { path = "../../incubator-teaclave-sgx-sdk/sgx_tprotected_fs" }
sgx_trts = { path = "../../incubator-teaclave-sgx-sdk/sgx_trts" }
sgx_tse = { path = "../../incubator-teaclave-sgx-sdk/sgx_tse" }
sgx_tseal = { path = "../../incubator-teaclave-sgx-sdk/sgx_tseal" }
sgx_tstd = { path = "../../incubator-teaclave-sgx-sdk/sgx_tstd" }
sgx_tunittest = { path = "../../incubator-teaclave-sgx-sdk/sgx_tunittest" }
sgx_types = { path = "../../incubator-teaclave-sgx-sdk/sgx_types" }
sgx_ucrypto = { path = "../../incubator-teaclave-sgx-sdk/sgx_ucrypto" }
sgx_unwind = { path = "../../incubator-teaclave-sgx-sdk/sgx_unwind" }
sgx_urts = { path = "../../incubator-teaclave-sgx-sdk/sgx_urts" }